Added sharing to the details screen.

--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.calebwhang.sunshine.app.DetailActivity">
     <item
+        android:id="@+id/action_share"
+        app:showAsAction="always"
+        android:title="@string/action_share"
+        android:actionProviderClass="android.widget.ShareActionProvider"
+        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"/>
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
